# msquic-asio

./: .gitignore  CMakeLists.txt  README.md  vcpkg.json
.github/workflows/: build.yaml
example/: inline.c  sample.c
include/boost/msquic/: basic_config_handle.hpp  basic_connection_handle.hpp  basic_listener_handle.hpp  basic_quic_handle.hpp  basic_registration_handle.hpp  basic_stream_handle.hpp  event.hpp  msquic_api.hpp  posix_descriptor.hpp
tests/: CMakeLists.txt  msquic_test.cpp  test_helper.hpp
